Fix form button spacing

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -29,10 +29,6 @@ th {
 td {
   padding: 0 5px 7px; }
 
-div.field,
-div.actions {
-  margin-bottom: 10px; }
-
 #notice {
   color: green; }
 
